# openfaas-tracing-walkthrough

./: .gitignore  README.md  cluster.yaml  grafana-ing.yaml  grafana-values.yaml  nginx-values.yaml  openfaas-ing.yaml  stack.yml
is-it-down/: handler.py  pyproject.toml  requirements.txt
template/python3-flask/: Dockerfile  index.py
